<resources>
    <string name="app_name">PersonalDiet</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic OAuth</string>
    <string name="desc_generic_idp">Use a generic OAuth identity provider, like Apple, Microsoft, Yahoo, or Twitter to authenticate with Firebase.</string>

    <string name="label_multi_factor">Multi-Factor Authentication</string>
    <string name="desc_multi_factor">Use SMS for two-factor authentication. Note: this feature is only available for Cloud Identity Platform.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="enroll_mfa">Enroll MFA</string>
    <string name="unenroll_mfa">Unenroll MFA</string>
    <string name="reload">Reload</string>
    <string name="fullName">Nombre y apellidos</string>

    <string name="phone">Teléfono</string>
    <string name="birth">Edad</string>
    <string name="weight">Peso (kg) ej. 74.1 </string>
    <string name="height">Altura (cm) ej. 180 </string>
    <string name="textFirstLogin">Queremos saber más de ti...</string>
    <string name="confirmarButton">Confirmar</string>


    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="multi_factor_signed_out">You are not signed in. To use this sample, first navigate to the Email/Password example to sign in and then return here to enroll in multi-factor auth.</string>

    <string name="actualizar">Actualizar</string>
    <string name="ej_74_1">ej. 74.1</string>
    <string name="cu_nto_pesas_hoy">¿Cuánto pesas hoy?</string>
    <string name="actualiza_todos_tus_datos">Actualiza todos tus datos</string>
    <string name="nombre_y_apellidos">Nombre y apellidos</string>
    <string name="tel_fono">Teléfono</string>
    <string name="edad">Edad</string>
    <string name="altura">Altura</string>
    <string name="ya_casi_est_s_elige_tu_dietista">Elige tu dietista personal</string>
    <string name="confirmar">Confirmar</string>
    <string name="solicitar_dietista">Solicitar dietista</string>
    <string name="no_te_has_registrado_antes_hazlo_aqu">¿No te has registrado antes? Hazlo aquí</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="contrase_a_min_6_car_cteres">Contraseña (min 6 carácteres)</string>
    <string name="repetir_contrase_a_min_6_car_cteres">Repetir contraseña </string>
    <string name="aaaaaaa">aaaaaaa</string>
    <string name="descripci_n">Descripción</string>
    <string name="valoraci_n_sobre_5">Valoración (sobre 5)</string>
    <string name="peso_actual">Peso actual</string>
    <string-array name="sexo">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
    </string-array>
    <string-array name="actividad">
        <item>1 vez al mes</item>
        <item>1 vez a la semana</item>
        <item>4 veces a la semanas</item>
        <item>Más de 4 veces a la semana</item>
    </string-array>
    <string name="titlulo_pickers">Obtener fecha y hora</string>

    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
</resources>