<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="734dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:text="@string/actualiza_todos_tus_datos"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="62dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_y_apellidos" />

        <EditText
            android:id="@+id/editTextPersonUpdate"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fullName"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="37dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tel_fono" />

        <EditText
            android:id="@+id/editTextPhoneUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:importantForAutofill="no" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="37dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edad" />

        <EditText
            android:id="@+id/editTextNumberUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edad"
            android:inputType="number"
            android:importantForAutofill="no" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="37dp" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/altura" />

        <EditText
            android:id="@+id/editTextNumberDecimalUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="97dp" />

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:onClick="botonConfirmarUpdate"
            android:text="@string/confirmarButton"
            android:theme="@style/AppTheme" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>