<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">

    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="734dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:text="@string/textFirstLogin"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="62dp" />

        <EditText
            android:id="@+id/editTextTextPersonName"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fullName"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="37dp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="37dp" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edad"
            android:importantForAutofill="no"
            android:inputType="number" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="37dp" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weight"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="37dp" />

        <EditText
            android:id="@+id/editTextNumberDecimal2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/height"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="97dp" />

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:onClick="botonConfirmar"
            android:text="@string/confirmarButton"
            android:theme="@style/AppTheme" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>