<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">

    <LinearLayout
        android:layout_width="355dp"
        android:layout_height="639dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="313dp"
            android:layout_height="44dp"
            android:text="@string/cu_nto_pesas_hoy"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="149dp" />

        <EditText
            android:id="@+id/newWeightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ej_74_1"
            android:inputType="numberDecimal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="94dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:onClick="actualizarPeso"
            android:text="@string/actualizar"
            android:theme="@style/AppTheme" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>