<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="731dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="55dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="360dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:fontFamily="@font/dolliescript_personaluse"
            android:includeFontPadding="true"
            android:rotationX="1"
            android:text="@string/ya_casi_est_s_elige_tu_dietista"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="40sp" />

        <Spinner
            android:id="@+id/spinnerDietician"
            android:layout_width="369dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:backgroundTint="#090909"
            android:backgroundTintMode="src_atop"
            android:popupBackground="@color/grey_100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space

                android:layout_width="match_parent"
                android:layout_height="52dp" />

            <TextView
                android:id="@+id/textView2"

                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nombre_y_apellidos"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nombreDietician"
                android:layout_width="354dp"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Space

                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/valoraci_n_sobre_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valoracionDietician"
                android:layout_width="348dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="33dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/descripci_n"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/comentarioDietician"
                android:layout_width="351dp"
                android:layout_height="39dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="156dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="386dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="confirmChooseDietician"
                android:text="@string/confirmar"
                android:theme="@style/AppTheme" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>